include/maplibre_native_c/map.h

/**
 * Starts an ordered copy of the last successfully parsed style document.
 *
 * The completion borrows the copied UTF-8 bytes for the callback.
 */
MLN_API mln_status mln_map_loaded_style_json(
  mln_map map, const mln_completion* completion
) MLN_NOEXCEPT;
/** Starts an ordered copy of the last requested style URL. */
MLN_API mln_status
mln_map_style_url(mln_map map, const mln_completion* completion) MLN_NOEXCEPT;
/**
 * Selects which map-originated event types this map queues.
 *
 * MapLibre Native reports map state through the observer callbacks behind these
 * events, and this mask decides which of them become queued events. An event of
 * an unselected type is never built and never queued, so it reaches no batch
 * and raises no wake flag.
 *
 * This call reads the bits in MLN_RUNTIME_EVENT_MASK_ALL_MAP_EVENTS and ignores
 * the rest, so MLN_RUNTIME_EVENT_MASK_ALL selects every map-originated type.
 * mln_map_snapshot_get() reports the last committed mask.
 *
 * A map that has not been narrowed selects every map-originated event type this
 * library reports, which covers types a caller's header may not declare. A new
 * mask applies to later events and keeps the events already queued.
 *
 * One unread render-update event covers every invalidation queued behind it,
 * compared against the queue tail. Leaving out a type that used to arrive
 * between two render updates makes those two updates adjacent, so they coalesce
 * into one.
 *
 * Select every event type the host reads. These types carry state a host
 * reaches no other way:
 *
 * - MLN_RUNTIME_EVENT_MASK_MAP_RENDER_UPDATE_AVAILABLE is the map's only
 *   invalidation report. See mln_map_request_repaint().
 * - MLN_RUNTIME_EVENT_MASK_MAP_STILL_IMAGE_FINISHED and
 *   MLN_RUNTIME_EVENT_MASK_MAP_STILL_IMAGE_FAILED report observer completion
 *   in addition to the still-image completion.
 * - MLN_RUNTIME_EVENT_MASK_MAP_CAMERA_TRANSITION_FINISHED carries the
 *   transition identity a caller set on an animation, and
 *   MLN_RUNTIME_EVENT_MASK_MAP_CAMERA_DID_CHANGE distinguishes a completed
 *   transition from a cancelled one. See mln_animation_options.transition_id.
 * - MLN_RUNTIME_EVENT_MASK_MAP_LOADING_FAILED and
 *   MLN_RUNTIME_EVENT_MASK_MAP_RENDER_ERROR carry native failure text.
 *
 * Style commands report application failures through their completions
 * regardless of this mask.
 *
 * Returns:
 * - MLN_STATUS_OK when the command is accepted.
 * - MLN_STATUS_INVALID_ARGUMENT when map is not live, mask contains an unknown
 *   bit, or completion is invalid.
 * - MLN_STATUS_INVALID_STATE when the map is closing.
 * - MLN_STATUS_NATIVE_ERROR when command acceptance fails.
 */
MLN_API mln_status mln_map_set_event_mask(
  mln_map map, uint64_t mask, const mln_completion* completion
) MLN_NOEXCEPT;